force-app/main/default/objects/Covenant__c/Covenant__c.object-meta.xml
<CustomObject>
    <description>Loan Milestones</description>
    <label>Covenant</label>
    <nameField>
        <label>Covenants Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Covenants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>