force-app/main/default/objects/Covenant__c/fields/Business_Entity__c.field-meta.xml
<CustomField>
    <fullName>Business_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Entity</label>
    <referenceTo>Business_Entity__c</referenceTo>
    <relationshipLabel>Covenants</relationshipLabel>
    <relationshipName>Covenants</relationshipName>
    <type>Lookup</type>
</CustomField>