force-app/main/default/objects/Covenant__c/fields/Covenant_Details__c.field-meta.xml
<CustomField>
    <fullName>Covenant_Details__c</fullName>
    <label>Covenant Details</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>