force-app/main/default/objects/Covenant__c/fields/Loan__c.field-meta.xml
<CustomField>
    <fullName>Loan__c</fullName>
    <label>Loan #</label>
    <length>60</length>
    <type>Text</type>
</CustomField>