force-app/main/default/objects/Covenant__c/fields/Milestones__c.field-meta.xml
<CustomField>
    <fullName>Milestones__c</fullName>
    <label>Milestones</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Construction milestone pending</fullName>
            </value>
            <value>
                <fullName>Financial covenant pending</fullName>
            </value>
            <value>
                <fullName>Sale or leasing milestone pending</fullName>
            </value>
            <value>
                <fullName>Mandatory principal payment covenant pending</fullName>
            </value>
            <value>
                <fullName>Other Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>