force-app/main/default/objects/Covenant__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compliant</fullName>
            </value>
            <value>
                <fullName>Non-Compliant</fullName>
            </value>
            <value>
                <fullName>Extension Approved</fullName>
            </value>
            <value>
                <fullName>Loan Modification</fullName>
            </value>
            <value>
                <fullName>Exception Made</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>