force-app/main/default/objects/Covenant__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Construction Milestone</fullName>
            </value>
            <value>
                <fullName>Financial Covenant</fullName>
            </value>
            <value>
                <fullName>Leasing Milestone</fullName>
            </value>
            <value>
                <fullName>Sales Milestone</fullName>
            </value>
            <value>
                <fullName>Mandatory Principal Payment</fullName>
            </value>
            <value>
                <fullName>Misc Covenant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>