force-app/main/default/objects/Covenant__c/listViews/All_Covenants.listView-meta.xml
<ListView>
    <fullName>All_Covenants</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Deal__c</columns>
    <columns>Business_Entity__c</columns>
    <columns>Loan__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Milestones__c</columns>
    <columns>Result__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Covenants</label>
</ListView>